Renamed project from "Debug_UART-USB" to "Debug_USB" and changed symbols from "UART" to "USB" for better consistency

--- a/Telem_Debug/Debug_USB/.project
+++ b/Telem_Debug/Debug_USB/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Debug_UART-USB</name>
+	<name>Debug_USB</name>
 	<comment></comment>
 	<projects>
 	</projects>
